src/snapshots/expr/record_field_update.txt
~~~META
description=Record with field update
type=expr
~~~SOURCE
{ person & age: 31 }
~~~PROBLEMS
UNKNOWN OPERATOR

This looks like an operator, but it's not one I recognize!

{ person & age: 31 }
Note: This is a parse error. Check your syntax.
SYNTAX PROBLEM

I didn't expect to see this in the type annotation.

{ person & age: 31 }
Note: This is a parse error. Check your syntax.
~~~TOKENS
OpenCurly(1:1-1:2),LowerIdent(1:3-1:9),OpAmpersand(1:10-1:11),LowerIdent(1:12-1:15),OpColon(1:15-1:16),Int(1:17-1:19),CloseCurly(1:20-1:21),EndOfFile(1:21-1:21),
~~~PARSE
(block (1:1-1:21)
	(statements
		(ident (1:3-1:9) "" "person")
		(malformed_expr (1:10-1:11) "expr_unexpected_token")
		(type_anno (1:12-1:21)
			"age"
			(malformed_expr (1:17-1:19) "ty_anno_unexpected_token"))))
~~~FORMATTED
{
	person
	
	age : 
}
~~~CANONICALIZE
(can_ir (top_level_defs "empty"))
~~~END